--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": ">=9.0.0",
     "mongoose": "^6.7.3",
     "socket.io": "^4.5.4",
     "validator": "^13.7.0"
